# Lichen-Universe-Unified

./: LICENSE  README.md  data.ts
.github/: ISSUE_TEMPLATE
ACΦ-496/: LICENSE  README.md  whitepapper.md
ASCAE/: LICENSE  README.md
FC-496/: README.md
FileSystem_UHFS/: README.md
LICHEN.STORAGE/: App.tsx  README.md  README2.md  app.py  index.html  metadata.json  package.json  requirements.txt  types.ts
LICHEN.STORAGE/components/: BenchmarkChart.tsx
LMEC_CEML/: CEML_theory_en.md  README(OLD).md  README.md  script.js
Licehn-demo/fc496-encoder/: Output.FC-496  README.md
Lichen-OS/: README.md
SYSTÈME_PHILONOMIQUE/: innovations.md
aether/: README.md
components/: Charts.tsx  CodeViewer.tsx  CortexVisualizer.tsx  FractalBackground.tsx  InnovationsModal.tsx  Ledger.tsx  MetabolicMonitor.tsx  Navbar.tsx  NucleotideGrid.tsx  PaperReader.tsx  Sidebar.tsx  Terminal.tsx  Widgets.tsx
datacenter_energy/: README.md  plan.md
datacenter_energy/Lichen-DataCenter-Optimizer/: README.md  les_ceml_sim.py
docs/: whitepaper_BCP.md
examples/: fc496_minimal.rs  hscale_decision.rs
github/workflows/: ci.yml
lichen-consciousness-engine/: Cargo.toml  README.md  lichen_engine.py
lichen-consciousness-engine/core/emergent_consciousness/src/: lib.rs
lichen-consciousness-engine/docs/whitepapers/: LCE_Whitepaper.md
pages/: ArchitectureDashboard.tsx  AuthPage.tsx  Feed.tsx
rust/: Cargo.toml
rust/src/: ecc.rs  geo.rs  lib.rs  time.rs  utils.rs
scripts/: archive_project,py
services/: genesisEngine.ts  mockDb.ts
views/: Architecture.tsx  Community.tsx  Demo.tsx
(+9 files in other folders)
