[package]
name = "lichen-consciousness-engine"
version = "0.1.0"
edition = "2021"
description = "A fractal-based cognitive architecture for emergent consciousness"
license = "MIT"
authors = ["Bryan Ouellette <lmc.theory@gmail.com>"]

[workspace]

members = [
    "core/fc496",
    "core/ceml",
    "core/pi_time",
    "core/vdfs",
    "core/emergent_consciousness",
    "apps/cli",
]
resolver = "2" 

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15"


[profile.release]
opt-level = 3       
lto = true          
codegen-units = 1   
panic = 'abort'     
strip = true        
